# quran-svm-parser

./: README.md  pyproject.toml
src/: container.py
src/api/: corpus_client.py  responses.py
src/lexicography/: lemma_service.py
src/morphology/: case_type.py  gender_type.py  mood_type.py  morphology_service.py  number_type.py  part_of_speech.py  person_type.py  pronoun.py  pronoun_type.py  segment.py  segment_reader.py  segment_type.py  special_type.py  state_type.py  tsv_reader.py  voice_type.py
src/orthography/: chapter.py  location.py  token.py  verse.py
src/parser/: action_classifier.py  action_type.py  oracle.py  parser.py  parser_action.py  queue.py  stack.py
src/svm/: ensemble.py  instance.py  model.py  train.py
src/syntax/: edge.py  graph_reader.py  graph_writer.py  phrase_classifier.py  phrase_type.py  relation.py  subgraph.py  syntax_graph.py  syntax_node.py  syntax_service.py  word.py  word_type.py
tests/: elas.py  parser_test.py  split_treebank.py
